--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,12 @@
     <string name="password">Password</string>
     <string name="terms">I have read and accept the terms and conditions of the Portales</string>
     <string name="sign_in">Sign in</string>
+
+    <string name="menu">Our menu</string>
+    <string name="antojitos">Antojitos</string>
+    <string name="especialidades">Especialidades</string>
+    <string name="combinaciones">Combinaciones</string>
+    <string name="tortas">Tortas</string>
+    <string name="sopas">Sopas</string>
+    <string name="drinks">Drinks</string>
 </resources>
